crates/analyzer/tests/snapshots/errors__mainless_ingot.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)

---
error: The ingot named "test_ingot" is missing a `main` module. 
Please add a `src/main.fe` file to the base directory.


