crates/analyzer/tests/snapshots/errors__map_constructor.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map<u8, u8>` type is not callable
  ┌─ [snippet]:3:3
  │
3 │   Map<u8, u8>()
  │   ^^^


