crates/analyzer/tests/snapshots/errors__map_int_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` key must be a type
  ┌─ [snippet]:3:14
  │
3 │   let x: Map<10, 20>
  │              ^^ expected a type name


