crates/analyzer/tests/snapshots/errors__map_map_key_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` key must be a primitive type
  ┌─ [snippet]:3:14
  │
3 │   let x: Map<Map<u8, u8>, address>
  │              ^^^^^^^^^^^ this has type `Map<u8, u8>`; expected a primitive type


