crates/analyzer/tests/snapshots/errors__map_no_type_arg_list.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` type requires key and value type arguments
  ┌─ [snippet]:3:10
  │
3 │   let x: Map
  │          ^^^
  │
  = Example: Map<address, u256>


