crates/analyzer/tests/snapshots/errors__map_no_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 generic arguments, but 0 were provided
  ┌─ [snippet]:3:10
  │
3 │   let x: Map<>
  │          ^^^-- supplied 0 arguments
  │          │   
  │          expects 2 generic arguments


