crates/analyzer/tests/snapshots/errors__mislabeled_call_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args.fe:4:13
  │
4 │         bar(doesnt_exist: 1, me_neither: 2)
  │             ^^^^^^^^^^^^ expected `val1`

error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args.fe:4:30
  │
4 │         bar(doesnt_exist: 1, me_neither: 2)
  │                              ^^^^^^^^^^ expected `val2`


